Rebrand project: Order Management System → Gestionale Iliad
🎯 COMPLETE PROJECT REBRANDING:

✅ FRONTEND UPDATES:
- Updated Italian translation: app.title = 'Gestionale Iliad'
- Updated English translation: app.title = 'Gestionale Iliad'
- Modified App.vue to use dynamic translated title
- Updated index.html: <title>Gestionale Iliad</title>
- Updated package.json: 'gestionale-iliad-frontend'

✅ BACKEND UPDATES:
- Updated composer.json: 'iliad/gestionale-iliad-api'
- Modified API root response: 'Gestionale Iliad API'
- Updated OpenAPI specification title and description
- Changed Swagger UI header and branding

✅ DOCKER UPDATES:
- Renamed containers:
  • gestionale_iliad_api (backend)
  • gestionale_iliad_frontend (frontend)
  • gestionale_iliad_db (MySQL)
  • gestionale_iliad_phpmyadmin (phpMyAdmin)

✅ DOCUMENTATION UPDATES:
- Updated Swagger UI title: 'Gestionale Iliad API Documentation'
- Modified header text: 'Documentazione completa API RESTful'
- Updated OpenAPI description to Italian

🧪 TESTING:
✅ Backend API responds with new name
✅ OpenAPI documentation shows updated titles
✅ All endpoints functional
✅ Frontend will display new branding

🎨 BRAND CONSISTENCY:
- All references updated from 'Order Management System'
- Consistent 'Gestionale Iliad' branding across all components
- Maintained Iliad color scheme (#E60012, #FF6900)
- Professional Italian business application naming

The project is now fully rebranded as 'Gestionale Iliad' 🚀

--- a/be/public/swagger.html
+++ b/be/public/swagger.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Order Management System API Documentation</title>
+    <title>Gestionale Iliad API Documentation</title>
     <link rel="stylesheet" type="text/css" href="https://unpkg.com/swagger-ui-dist@5.0.0/swagger-ui.css" />
     <style>
         html {
@@ -37,8 +37,8 @@
 </head>
 <body>
     <div class="header">
-        <h1>🚀 Order Management System API</h1>
-        <p>Complete RESTful API documentation with interactive testing</p>
+        <h1>🚀 Gestionale Iliad API</h1>
+        <p>Documentazione completa API RESTful con testing interattivo</p>
     </div>
     <div id="swagger-ui"></div>
     <script src="https://unpkg.com/swagger-ui-dist@5.0.0/swagger-ui-bundle.js"></script>
