--- a/be/public/swagger-ui.html
+++ b/be/public/swagger-ui.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Order Management System API Documentation</title>
+    <title>Gestionale Iliad API Documentation</title>
     <link rel="stylesheet" type="text/css" href="https://unpkg.com/swagger-ui-dist@5.0.0/swagger-ui.css" />
     <style>
         html {
