Add official Iliad logo as favicon
🎨 OFFICIAL ILIAD FAVICON:

✅ FAVICON IMPLEMENTATION:
- Downloaded official Iliad logo from https://www.iliad.it/assets/images/logo.png
- Set iliad-logo.png as main favicon in browser tabs
- Removed custom SVG favicon (using official logo instead)
- Updated manifest.json to use official logo for all icon sizes

✅ BROWSER INTEGRATION:
- Favicon: Official Iliad logo appears in browser tabs
- Apple touch icon: Official Iliad logo for iOS devices
- PWA manifest: Uses official logo for all sizes (32x32, 192x192, 512x512)
- Theme color: #E60012 (Iliad brand red)

✅ CLEAN SETUP:
- Only official Iliad assets used
- Removed custom favicon files
- Consistent branding with official logo
- Professional appearance in browser tabs

🔧 FILES:
- fe/public/iliad-logo.png (Official Iliad logo)
- fe/public/manifest.json (Updated to use official logo)
- fe/index.html (Updated favicon links)

Now the browser tab shows the official Iliad logo! 🎯

--- a/fe/index.html
+++ b/fe/index.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Gestionale Iliad</title>
+    
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="/iliad-logo.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/iliad-logo.png" />
+    <link rel="apple-touch-icon" href="/iliad-logo.png" />
+    <meta name="theme-color" content="#E60012" />
+    <link rel="manifest" href="/manifest.json" />
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap"
       rel="stylesheet"
